--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
  ### CDN Params
- CDN_HOST= cdn_server_name
+ CDN_HOST= cdn.server
 
  ### GRPC Params
  GRPC_PORT=44300.44400.44500
- HOST=localhost:
