--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
  ### CDN Params
- CDN_HOST= cdn.server
+ CDN_HOST= cdn.server-name
 
  ### GRPC Params
  GRPC_PORT=44300.44400.44500
+ HOST=localhost:
